# NotesRecognizer

./: .gitignore  VoiceChanger.sln
Matlab/: Math.docx  WaveletFourier.m
Suprecessor/: CMakeLists.txt
Suprecessor/headers/: AudioPlayer.h  AudioPlayerAPI.h  AudioRecorder.h  CMakeLists.txt
Suprecessor/src/: AudioPlayer.cpp  AudioPlayerAPI.cpp  CMakeLists.txt
Suprecessor/src/dev/: CMakeLists.txt  main.cpp
VoiceChanger/: VoiceChanger.cs  VoiceChanger.csproj
VoiceChanger/FormatParser/: AudioContainer.cs  AudioLoader.cs  AudioSaver.cs  FmtChunk.cs  FormatType.cs  RIFF_Chunk.cs  WAV_Header.cs  WAV_Loader.cs  WAV_Saver.cs
VoiceChanger/FourierTransform/: FourierTransform.cs
VoiceChanger/NoteRecognizer/: BestTablatureFinder.cs  FrequencyData.cs  GuitarFrequencyData.cs  GuitarTuningNotesCreator.cs  Note.cs  NoteContainer.cs  NoteRecognizer.cs  NotesToTablatureConverter.cs
VoiceChanger/Properties/: Resources.Designer.cs  Resources.resx
VoiceChanger/Scalogram/: FrequencyScalogram.cs  GuitarHitsScalogramCreator.cs  GuitarHitsScalogramSettings.cs  ScalogramContainer.cs  ScalogramCreator.cs  SingleWaveletScalogramCreator.cs
VoiceChanger/SpectrumCreator/: FastFourierTransformCPU.cs  FastFourierTransformGPU.cs  FrequencyAmplitudeData.cs  IFourierTransform.cs  SpectrumContainer.cs  SpectrumCreator.cs  (+6 more)
VoiceChangerApp/: App.xaml  App.xaml.cs  EditorWindow.xaml  EditorWindow.xaml.cs  NLog.config  Resources.Designer.cs  Resources.resx  VoiceChangerApp.csproj  VoiceChangerAppPostBuild.ps1
VoiceChangerCalc/: CMakeLists.txt
VoiceChangerTests/: VoiceChangerTests.csproj
(+142 files in other folders)
